# CICD-Copilot

./: .replit  Dockerfile.backend  Dockerfile.frontend  README.md  build-react.sh  package-lock.json  package.json  pyproject.toml  run_app.sh  start_fastapi.py  start_fastapi_server.sh
attached_assets/: Pasted--python3-run-server-py-Creating-database-migrations-bin-sh-python-command-not-found-Applying-1747582581435.txt
backend/: README.md  django-workflow.sh  main.py  manage.py  nginx.conf  requirements.txt  run_fastapi.py  run_server.py
backend/api/: admin.py  app.py  database.py  file_processor.py  jenkins_converter.py  langchain_processor.py  middleware.py  models.py  schemas.py  serializers.py  urls.py  views.py
backend/api/routers/: executions.py  jenkins.py  mop_files.py  pipeline_steps.py  pipelines.py  settings.py  shared.py  team.py
backend/mop_pipeline_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/templates/: index.html
client/: index.html
client/src/: App.tsx
client/src/components/dashboard/: CollectionsGrid.tsx  DashboardHeader.tsx  RecentPhotos.tsx  ShareSection.tsx  UploadSection.tsx
client/src/components/layout/: MobileHeader.tsx  (+1 more)
client/src/lib/: queryClient.ts  utils.ts
client/src/pages/: Collections.tsx  Dashboard.tsx  JenkinsPipeline.tsx  MopFiles.tsx  Photos.tsx  PipelineVisualizer.tsx  Pipelines.tsx  Settings.tsx  Shared.tsx
kubernetes/: deployment.yaml  ingress.yaml  service.yaml
server/: database-storage.ts  db.ts  index.ts  jenkins-converter.ts  modify_index.ts  routes.ts  storage.ts
shared/: schema.ts
(+7 files in other folders)
